fluxcd/apps/overlays/production/sabnzbd/statefulset-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sabnzbd
spec:
  template:
    metadata:
      labels:
        policy.prplanit.com/ingress: "true"
        istio.io/dataplane-mode: none
    spec:
      containers:
        - name: sabnzbd
          image: docker.io/linuxserver/sabnzbd:5.1.3
        - name: gluetun
          image: docker.io/qmcgaw/gluetun:v3.41.3
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ceph-rbd-retain
        resources:
          requests:
            storage: 2Gi
    - metadata:
        name: incomplete
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ceph-rbd-retain
        resources:
          requests:
            storage: 50Gi
    - metadata:
        name: downloads
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ceph-rbd-retain
        resources:
          requests:
            storage: 100Gi
