fluxcd/apps/overlays/production/sabnzbd/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  annotations:
    lbipam.cilium.io/ips: "172.22.30.33"
    lbipam.cilium.io/sharing-key: "great-sea"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    service.cilium.io/loadbalancer-mode: "dsr"
spec:
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
