fluxcd/apps/overlays/production/sabnzbd/service-sabnzbd-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  labels:
    policy.prplanit.com/ingress: "true"
