fluxcd/apps/overlays/production/sabnzbd/httproute-xylem.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd-xylem
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Downloads & Media (Swift Sail⛵)"
      conditions:
        - "[STATUS] == any(200, 302)"
        - "[BODY] != pat(*Fairer Pages*)"
        - "[RESPONSE_TIME] < 5000"
spec:
  parentRefs:
    - name: phloem-gateway
      namespace: arylls-lookout
  hostnames:
    - "sabnzbd.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sabnzbd
          port: 8080
